cluster/base/convertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convertx
  namespace: convertx
spec:
  type: ClusterIP
  selector:
    app: convertx
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
